schema/testdata/errors/attribute_computed_expression.keel
model Invoice {
    fields {
        items Item[]
        //expect-error:36:42:AttributeExpressionError:unknown identifier 'items2'
        total Number @computed(SUM(items2.price))
        //expect-error:42:43:AttributeExpressionError:Decimal[] not supported as an argument for the function 'SUMIF'
        missingArg Number @computed(SUMIF(invoice.items.price))
        //expect-error:43:44:AttributeExpressionError:Text[] not supported as an argument for the function 'SUM'
        wrongArgType1 Number @computed(SUM(invoice.items.description))
        //expect-error:45:46:AttributeExpressionError:cannot use operator 'SUMIF' with types Decimal[] and Invoice
        wrongArgType2 Number @computed(SUMIF(invoice.items.price, invoice))
        //expect-error:39:90:AttributeExpressionError:expression expected to resolve to type Text but it is Decimal
        wrongFieldType Text @computed(SUMIF(invoice.items.price, invoice.items.price > 0))
        //expect-error:49:50:AttributeExpressionError:cannot use operator '+' with types Status and Status
        status2 Status @computed(invoice.status + invoice.status)
        status Status @default(Status.Open)
    }
}

model Item {
    fields {
        invoice Invoice
        description Text
        price Decimal
        quantity Number
        //expect-error:38:45:AttributeExpressionError:unknown identifier 'invalid'
        unknownVar Decimal @computed(invalid)
        //expect-error:37:42:AttributeExpressionError:unknown identifier 'price'
        //expect-error:45:53:AttributeExpressionError:unknown identifier 'quantity'
        noRootVar Decimal @computed(price * quantity)
        //expect-error:37:53:AttributeExpressionError:expression expected to resolve to type Decimal but it is Text
        wrongType Decimal @computed(item.description)
        //expect-error:31:34:AttributeExpressionError:unknown identifier 'ctx'
        ctx Boolean @computed(ctx.isAuthenticated)
        //expect-error:37:40:AttributeExpressionError:unknown identifier 'ctx'
        identity Identity @computed(ctx.identity)
        //expect-error:33:43:AttributeArgumentError:@computed expressions cannot reference itself
        total Decimal @computed(item.total * 5)
        //expect-error:54:55:AttributeExpressionError:cannot use operator '-' with types Text and Text
        invalidStringOp Text @computed("Description" - item.description)
        //expect-error:60:61:AttributeExpressionError:cannot use operator '+' with types Text and Number
        invalidStringValue Text @computed(item.description + 1)
        //expect-error:41:48:AttributeExpressionError:unknown identifier 'notItem'
        invalidOperand Number @computed(notItem.quantity + 1)
    }
    actions {
        get getItem(id) 
    }
}

enum Status {
    Open
    Paid
}